# CG101HW

./: .gitignore  CMakelists.txt  README.md
3rd/: CMakelists.txt
Assignment  0/代码框架/: main.cpp
Assignment1/代码框架/: main.cpp
Source/Assignment  0/代码框架/: CMakeLists.txt
Source/Assignment1/代码框架/: CMakeLists.txt  main.cpp
Source/Assignment2/代码框架/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Source/Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Source/Assignment4/code/: CMakeLists.txt  main.cpp
Source/Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Triangle.hpp
Source/Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  HW6.h  HW6.h.in  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  main.cpp
Source/Assignment7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Triangle.hpp  global.hpp  main.cpp
cmake/: EigenInclude.cmake  OpenCVInclude.cmake
doc/: Note.md  hw5_out.ppm  hw7_out.ppm  hw7_spp_128.ppm
